# crurl

./: README.md  pyproject.toml  tox.ini
src/crurl/: __init__.py  converter.py  main.py  webscraper.py
