[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "crurl"
author = "M P Flynn"
author-email = "mpflynnx@gmail.com"
home-page = "https://github.com/mpflynnx/crurl"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires = ["beautifulsoup4==4.9.3", "colorama==0.4.4", "lxml==4.6.1", "validus==0.3.0", "regex==2025.11.3"]

requires-python=">=3.7"
description-file="README.md"

[tool.commitizen]
version = "0.3.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "src/crurl/__init__.py"
]

[tool.flit.scripts]
crurl = "crurl:main"

# source:
# https://flit.readthedocs.io/en/latest/pyproject_toml.html#sdist-section
[tool.flit.sdist]
include = ["doc/"]
exclude = [
    "doc/*.html",
    "test/"]
